update for card maker

--- a/cardmakerapp-index.html
+++ b/cardmakerapp-index.html
@@ -111,7 +111,7 @@
                 <div id="image_container_14" class="fr-widget fr-container fr_image_container_14">
                     <div id="volume_up_icon_14" class="fr-widget fr-svg fr_volume_up_icon_14">
                         <div class="fr-svg-inner">
-                            <i class="fa fa-map-o fa-3x" aria-hidden="true"></i>
+                            <i class="fa fa-folder-open fa-3x" aria-hidden="true"></i>
 
                         </div>
                     </div>
@@ -128,7 +128,7 @@
                 <div class="fr-widget fr-container fr_image_container_14">
                     <div class="fr-widget fr-svg fr_volume_up_icon_14">
                         <div class="fr-svg-inner">
-                            <i class="fa fa-map-marker fa-3x" aria-hidden="true"></i>
+                            <i class="fa fa-star fa-3x" aria-hidden="true"></i>
 
                         </div>
                     </div>
@@ -145,7 +145,7 @@
                 <div id="image_container_15" class="fr-widget fr-container fr_image_container_15">
                     <div id="volume_up_icon_15" class="fr-widget fr-svg fr_volume_up_icon_15">
                         <div class="fr-svg-inner">
-                            <i class="fa fa-users fa-3x" aria-hidden="true"></i>
+                            <i class="fa fa-picture-o fa-3x" aria-hidden="true"></i>
 
                         </div>
                     </div>
@@ -159,21 +159,7 @@
                 </div>
             </div>
 
-            <div id="grid_16" class="fr-widget fr-grid fr_grid_16">
-                <div id="image_container_16" class="fr-widget fr-container fr_image_container_16">
-                    <div id="volume_up_icon_16" class="fr-widget fr-svg fr_volume_up_icon_16">
-                        <div class="fr-svg-inner">
-                            <div class="fr-svg-inner">
-                                <i class="fa fa-bell-o fa-3x" aria-hidden="true"></i>
 
-                            </div>
-
-                        </div>
-                    </div>
-                </div>
-
-
-            </div>
         </div>
         <div id="action_container" class="fr-widget fr-container fr_action_container">
             <div id="container_24" class="fr-widget fr-container fr_container_24">
