update download url for card maker

--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
                             src="./files/apple.png" width="180" alt="Get it from Apple Store"
                             style="max-width:100%;"></a>
                     </p>
-                    <p>pigflymoon@gmai.com</p>
+                    <p>pigflymoon@gmail.com</p>
                 </div>
             </div>
         </div>
