--- a/cardmakerapp-privacy-policy.html
+++ b/cardmakerapp-privacy-policy.html
@@ -154,7 +154,7 @@
                             and assume no responsibility for the content, privacy policies, or practices of any
                             third-party sites or services.
                         </p>
-                        <h5>Children’s Privacy</h5>
+                        <h5>Children's Privacy</h5>
                         <p>
                             These Services do not address anyone under the age of 13. I do not knowingly collect
                             personally identifiable information from children under 13. In the case I discover that a
