update for card maker and qukechat

--- a/cardmakerapp-index.html
+++ b/cardmakerapp-index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>Welcome to Cardmaker App</title>
     <link rel="stylesheet" href="./files/style.19f5365.css">
-    <link rel="stylesheet" href="./files/style.css">
+    <link rel="stylesheet" href="./files/cardmaker/style.css">
     <link rel="stylesheet" href="./files/font-awesome/css/font-awesome.min.css">
     <script type="text/javascript" src="https://pig2moon.github.io/files/footer.19f5365.js"></script>
     <link rel="shortcut icon" type="image/x-icon" href="http://quakechat.kiwiinfo.com/files/favicon.ico">
@@ -76,7 +76,7 @@
         <div id="hd3_content" class="fr-widget fr-container fr_hd3_content">
             <div id="text_25" class="fr-widget fr-text fr-wf fr_text_bright_left fr_text_25">
                 <div class="fr-text">
-                    <h1>Cardmaker App</h1>
+                    <h1>Card maker app</h1>
                     <p>Let's make our own card and have fun!</p>
                 </div>
             </div>
