--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -5,7 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>Privacy Policy</title>
     <link rel="stylesheet" href="./files/style.19f5365.css">
-    <link rel="stylesheet" href="./files/style.css">
+    <link rel="stylesheet" href="./files/quakechat/style.css">
     <link rel="stylesheet" href="./files/font-awesome/css/font-awesome.min.css">
     <script type="text/javascript" src="https://pig2moon.github.io/files/footer.19f5365.js"></script>
 
