update cardmaker links and ico

--- a/cardmakerapp-privacy-policy.html
+++ b/cardmakerapp-privacy-policy.html
@@ -9,8 +9,9 @@
     <link rel="stylesheet" href="./files/font-awesome/css/font-awesome.min.css">
     <script type="text/javascript" src="https://pig2moon.github.io/files/footer.19f5365.js"></script>
 
-    <link rel="shortcut icon" type="image/x-icon" href="http://quakechat.kiwiinfo.com/files/favicon.ico">
-    <link rel="apple-touch-icon" href="http://quakechat.kiwiinfo.com/files/favicon.ico">
+<link rel="shortcut icon" type="image/x-icon" href="http://quakechat.kiwiinfo.com/files/cardmaker/cardmakerapp.ico">
+    <link rel="apple-touch-icon" href="http://quakechat.kiwiinfo.com/files/cardmaker/cardmakerapp.ico">
+
     <script type="text/javascript">
         var fonts = {
             "Montserrat": {
@@ -65,9 +66,9 @@
     <div id="nav_with_logo" class="fr-widget fr-container fr_nav_with_logo">
         <div id="navigation_dark_with_logo_2"
              class="fr-widget fr-navigation fr-navigation-active fr_navigation_dark_with_logo_2">
-            <a id="logo_2" class="fr-widget fr-svg fr_logo_2 fr-link" href="http://quakechat.kiwiinfo.com/">
+            <a id="logo_2" class="fr-widget fr-svg fr_logo_2 fr-link" href="http://quakechat.kiwiinfo.com/cardmakerapp-index.html">
                 <div class="fr-svg-inner">
-                    <H1>Card maker App</H1>
+                    <H1>Cardmaker App</H1>
                 </div>
             </a>
 
@@ -191,7 +192,7 @@
             <div id="get_the_app" class="fr-widget fr-text fr-wf fr_text_dark_left fr_get_the_app">
                 <div class="fr-text">
                     <h4>Get The App</h4>
-                    <p><a href=""><img
+                    <p><a href="https://itunes.apple.com/us/app/cardmaker-app/id1318023993?mt=8"><img
                             src="./files/apple.png" width="180" alt="Get it from Apple Store"
                             style="max-width:100%;"></a>
                     </p>
@@ -206,37 +207,34 @@
                 </div>
             </div>
 
-            <div id="wf_soc_icons" class="fr-widget fr-grid fr_wf_soc_icons">
-                <div id="wf_twitter" class="fr-widget fr-container fr_wf_twitter">
-                    <a
-                            class="fr-widget fr-svg fr_icon_medium_bright fr_svg_27 fr-widget-hover-opacity-60 fr-link"
-                            href="" target="_blank">
-                        <div class="fr-svg-inner">
-                            <i class="fa fa-twitter fa-2x" aria-hidden="true"></i>
-                        </div>
-                    </a>
-                </div>
+          <div id="wf_soc_icons" class="fr-widget fr-grid fr_wf_soc_icons">
+                         <div id="wf_twitter" class="fr-widget fr-container fr_wf_twitter">
+                             <a class="fr-widget fr-svg fr_icon_medium_bright fr_svg_27 fr-widget-hover-opacity-60 fr-link"
+                                     href="https://twitter.com/Cardmaker App" target="_blank">
+                                 <div class="fr-svg-inner">
+                                     <i class="fa fa-twitter fa-2x" aria-hidden="true"></i>
+                                 </div>
+                             </a>
+                         </div>
 
-                <div id="wf_facebook" class="fr-widget fr-container fr_wf_facebook">
-                    <a
-                            class="fr-widget fr-svg fr_icon_medium_bright fr_svg_27 fr-widget-hover-opacity-60 fr-link"
-                            href="" target="_blank">
-                        <div class="fr-svg-inner">
-                            <i class="fa fa-facebook fa-2x" aria-hidden="true"></i>
-                        </div>
-                    </a>
-                </div>
+                         <div id="wf_facebook" class="fr-widget fr-container fr_wf_facebook">
+                             <a class="fr-widget fr-svg fr_icon_medium_bright fr_svg_27 fr-widget-hover-opacity-60 fr-link"
+                                     href="https://www.facebook.com/Cardmaker App-183189308899521/?modal=admin_todo_tour" target="_blank">
+                                 <div class="fr-svg-inner">
+                                     <i class="fa fa-facebook fa-2x" aria-hidden="true"></i>
+                                 </div>
+                             </a>
+                         </div>
 
-                <div class="fr-widget fr-container fr_wf_youtube">
-                    <a
-                            class="fr-widget fr-svg fr_icon_medium_bright fr_svg_27 fr-widget-hover-opacity-60 fr-link"
-                            href="" target="_blank">
-                        <div class="fr-svg-inner">
-                            <i class="fa fa-instagram fa-2x" aria-hidden="true"></i>
-                        </div>
-                    </a>
-                </div>
-            </div>
+                         <div class="fr-widget fr-container fr_wf_youtube">
+                             <a class="fr-widget fr-svg fr_icon_medium_bright fr_svg_27 fr-widget-hover-opacity-60 fr-link"
+                                     href="https://www.instagram.com/cardmakerapp/" target="_blank">
+                                 <div class="fr-svg-inner">
+                                     <i class="fa fa-instagram fa-2x" aria-hidden="true"></i>
+                                 </div>
+                             </a>
+                         </div>
+                     </div>
         </div>
     </div>
 </div>
@@ -247,8 +245,8 @@
 <div class="fr-copyright-footer">
     <div class="fr-widget fr-container">
         <div class="fr-widget fr-text fr-wf fr-made-with-froont">
-            <a href="http://froont.com/" class="fr-text" target="_blank">
-                MADE WITH <span class="heart">♥</span> AND <b>QUAKECHAT</b>
+            <a href="https://itunes.apple.com/us/app/cardmaker-app/id1318023993?mt=8" class="fr-text" target="_blank">
+                MADE WITH <span class="heart">♥</span> AND <b>CARDMAKER APP</b>
             </a>
         </div>
     </div>
