--- a/cardmakerapp-index.html
+++ b/cardmakerapp-index.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="./files/cardmaker/style.css">
     <link rel="stylesheet" href="./files/font-awesome/css/font-awesome.min.css">
     <script type="text/javascript" src="https://pig2moon.github.io/files/footer.19f5365.js"></script>
-    <link rel="shortcut icon" type="image/x-icon" href="http://quakechat.kiwiinfo.com/files/favicon.ico">
-    <link rel="apple-touch-icon" href="http://quakechat.kiwiinfo.com/files/favicon.ico">
+    <link rel="shortcut icon" type="image/x-icon" href="http://quakechat.kiwiinfo.com/files/cardmaker/cardmakerapp.ico">
+    <link rel="apple-touch-icon" href="http://quakechat.kiwiinfo.com/files/cardmaker/cardmakerapp.ico">
     <script type="text/javascript">
         var fonts = {
             "Montserrat": {
@@ -64,7 +64,7 @@
     <div id="nav_with_logo" class="fr-widget fr-container fr_nav_with_logo">
         <div id="navigation_dark_with_logo_2"
              class="fr-widget fr-navigation fr-navigation-active fr_navigation_dark_with_logo_2">
-            <a id="logo_2" class="fr-widget fr-svg fr_logo_2 fr-link" href="http://quakechat.kiwiinfo.com/">
+            <a id="logo_2" class="fr-widget fr-svg fr_logo_2 fr-link" href="https://itunes.apple.com/us/app/cardmaker-app/id1318023993?mt=8">
                 <div class="fr-svg-inner">
                     <H1>Cardmaker App</H1>
                 </div>
@@ -196,7 +196,7 @@
 
                     <div id="wf_youtube_3" class="fr-widget fr-container fr_wf_youtube_3">
                         <a class="fr-widget fr-svg fr_icon_medium_bright fr_svg_27 fr-widget-hover-opacity-60 fr-link"
-                                href="https://www.instagram.com/quakechat/" target="_blank">
+                                href="https://www.instagram.com/cardmakerapp/" target="_blank">
                             <div class="fr-svg-inner">
                                 <i class="fa fa-instagram fa-2x" aria-hidden="true"></i>
                             </div>
@@ -287,7 +287,7 @@
 
                 <div class="fr-widget fr-container fr_wf_youtube">
                     <a class="fr-widget fr-svg fr_icon_medium_bright fr_svg_27 fr-widget-hover-opacity-60 fr-link"
-                            href="https://www.instagram.com/quakechat/" target="_blank">
+                            href="https://www.instagram.com/cardmakerapp/" target="_blank">
                         <div class="fr-svg-inner">
                             <i class="fa fa-instagram fa-2x" aria-hidden="true"></i>
                         </div>
@@ -314,7 +314,7 @@
 <div class="fr-copyright-footer">
     <div class="fr-widget fr-container">
         <div class="fr-widget fr-text fr-wf fr-made-with-froont">
-            <a href="quakechat.kiwiinfo.com" class="fr-text" target="_blank">
+            <a href="http://quakechat.kiwiinfo.com/cardmakerapp-index.html" class="fr-text" target="_blank">
                 MADE WITH <span class="heart">♥</span> AND <b>CARDMAKER APP</b>
             </a>
         </div>
