--- a/cardmakerapp-terms-of-use.html
+++ b/cardmakerapp-terms-of-use.html
@@ -4,7 +4,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>Terms of Use</title>
-    <link rel="stylesheet" href="./files/style.19f5365.css">
+    <link rel="stylesheet" href="./files/normalize.css">
     <link rel="stylesheet" href="./files/cardmaker/style.css">
     <link rel="stylesheet" href="./files/font-awesome/css/font-awesome.min.css">
     <script type="text/javascript" src="https://pig2moon.github.io/files/footer.19f5365.js"></script>
