--- a/cardmakerapp-terms-of-use.html
+++ b/cardmakerapp-terms-of-use.html
@@ -538,6 +538,14 @@
                       </div>
         </div>
     </div>
+    <div>
+        <div class="links">
+             <ul>
+                  <li><a href="http://quakechat.kiwiinfo.com/cardmakerapp-index.html">Home</a></li>
+                  <li><a href="http://quakechat.kiwiinfo.com/cardmakerapp-privacy-policy.html">Privacy Policy</a></li>
+              </ul>
+          </div>
+    </div>
 </div>
 
 <div id="container" class="fr-widget fr-container fr_container">
