--- a/cardmakerapp-index.html
+++ b/cardmakerapp-index.html
@@ -297,12 +297,10 @@
         </div>
     </div>
     <div>
-
         <div class="links">
             <ul>
-                <!--http://quakechat.kiwiinfo.com-->
-                <li><a href="./cardmakerapp-terms-of-use.html">Terms of use</a></li>
-                <li><a href="./cardmakerapp-privacy-policy.html">Privacy Policy</a></li>
+                <li><a href="http://quakechat.kiwiinfo.com/cardmakerapp-terms-of-use.html">Terms of use</a></li>
+                <li><a href="http://quakechat.kiwiinfo.com/cardmakerapp-privacy-policy.html">Privacy Policy</a></li>
             </ul>
         </div>
     </div>
