--- a/cardmakerapp-privacy-policy.html
+++ b/cardmakerapp-privacy-policy.html
@@ -237,6 +237,14 @@
                      </div>
         </div>
     </div>
+    <div>
+            <div class="links">
+                <ul>
+                    <li><a href="http://quakechat.kiwiinfo.com/cardmakerapp-index.html">Home</a></li>
+                    <li><a href="http://quakechat.kiwiinfo.com/cardmakerapp-terms-of-use.html">Terms of use</a></li>
+                </ul>
+            </div>
+    </div>
 </div>
 
 <div id="container" class="fr-widget fr-container fr_container">
