delete cardmaker add url for quakechat

--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -239,6 +239,16 @@
             </div>
         </div>
     </div>
+     <div>
+
+            <div class="links">
+                <ul>
+                    <!--http://quakechat.kiwiinfo.com-->
+                    <li><a href="./index.html">Home</a></li>
+                    <li><a href="./terms-of-use.html">Terms of use</a></li>
+                </ul>
+            </div>
+        </div>
 </div>
 
 <div id="container" class="fr-widget fr-container fr_container">
@@ -247,7 +257,7 @@
 <div class="fr-copyright-footer">
     <div class="fr-widget fr-container">
         <div class="fr-widget fr-text fr-wf fr-made-with-froont">
-            <a href="http://froont.com/" class="fr-text" target="_blank">
+            <a href="quakechat.kiwiinfo.com" class="fr-text" target="_blank">
                 MADE WITH <span class="heart">♥</span> AND <b>QUAKECHAT</b>
             </a>
         </div>
