--- a/terms-of-use.html
+++ b/terms-of-use.html
@@ -541,6 +541,15 @@
             </div>
         </div>
     </div>
+      <div>
+
+            <div class="links">
+                <ul>
+                    <li><a href="./index.html">Home</a></li>
+                    <li><a href="./privacy-policy.html">Privacy Policy</a></li>
+                </ul>
+            </div>
+        </div>
 </div>
 
 <div id="container" class="fr-widget fr-container fr_container">
@@ -549,7 +558,7 @@
 <div class="fr-copyright-footer">
     <div class="fr-widget fr-container">
         <div class="fr-widget fr-text fr-wf fr-made-with-froont">
-            <a href="http://froont.com/" class="fr-text" target="_blank">
+            <a href="quakechat.kiwiinfo.com" class="fr-text" target="_blank">
                 MADE WITH <span class="heart">♥</span> AND <b>QUAKECHAT</b>
             </a>
         </div>
